monitoring/Routing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingree.class: ngnix
spec:
  ingressClassName: nginx
  rules:
  - host: demo.example.com.devlook.tech

    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: housing 
            port:
              number: 80
